charts/auth/auth-service/test.yaml
---
# Source: auth-service/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth-service
  labels:
    helm.sh/chart: auth-service-0.1.0
    app.kubernetes.io/name: auth-service
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "1.16.0"
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: auth-service
    app.kubernetes.io/instance: release-name
---
# Source: auth-service/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-service
  labels:
    helm.sh/chart: auth-service-0.1.0
    app.kubernetes.io/name: auth-service
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "1.16.0"
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: auth-service
      app.kubernetes.io/instance: release-name
  template:
    metadata:
      labels:
        helm.sh/chart: auth-service-0.1.0
        app.kubernetes.io/name: auth-service
        app.kubernetes.io/instance: release-name
        app.kubernetes.io/version: "1.16.0"
        app.kubernetes.io/managed-by: Helm
    spec:
      imagePullSecrets:
        - name: regcred
      serviceAccountName: auth-service
      securityContext:
        {}
      containers:
        - name: auth-service
          securityContext:
            {}
          image: "harbor.warering.online/shop-microservices/shop-microservice:latest"
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /auth_v1
              port: 3000
            initialDelaySeconds: 3
            periodSeconds: 5
            successThreshold: 1
            timeoutSeconds: 1
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /auth_v1
              port: 3000
            initialDelaySeconds: 3
            periodSeconds: 5
            successThreshold: 1
            timeoutSeconds: 1
          resources:
            null
          volumeMounts:
            - mountPath: /etc/env/.env
              name: env-volume
              readOnly: true
              subPath: .env
      volumes:
        - name: env-volume
          secret:
            items:
            - key: .env
              path: .env
            optional: false
            secretName: auth-env
---
# Source: auth-service/templates/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: auth-gateway
  labels:
    helm.sh/chart: auth-service-0.1.0
    app.kubernetes.io/name: auth-service
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "1.16.0"
    app.kubernetes.io/managed-by: Helm
spec:
  gatewayClassName: auth-gatewayclass
  # Only Routes from the same namespace are allowed.
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: All
---
# Source: auth-service/templates/gateway_class.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: auth-gatewayclass
spec:
  controllerName: traefik.io/gateway-controller
---
# Source: auth-service/templates/http_route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: auth-httproute
  labels:
    
    helm.sh/chart: auth-service-0.1.0
    app.kubernetes.io/name: auth-service
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "1.16.0"
    app.kubernetes.io/managed-by: Helm
spec:
  parentRefs:
    - name: auth-gateway
      sectionName: http
      kind: Gateway
  hostnames:
    - "whoami.localhost"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: auth-service
          port: 80
---
# Source: auth-service/templates/tests/test-connection.yaml
apiVersion: v1
kind: Pod
metadata:
  name: "auth-service-test-connection"
  labels:
    helm.sh/chart: auth-service-0.1.0
    app.kubernetes.io/name: auth-service
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "1.16.0"
    app.kubernetes.io/managed-by: Helm
  annotations:
    "helm.sh/hook": test
spec:
  containers:
    - name: wget
      image: busybox
      command: ['wget']
      args: ['auth-service:80']
  restartPolicy: Never
